<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/black"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:padding="3dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/current_quest_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_number"
            android:textSize="25sp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_of_10"
            android:padding="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"

            />

        <TextView
            android:id="@+id/text_view_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:text="4"
            android:textColor="@android:color/holo_red_light"
            android:textSize="35sp"
            android:textStyle="bold"
            android:padding="3dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="secs"
            android:padding="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="num1"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="186dp"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:layout_marginLeft="132.5dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@android:color/holo_green_light"
            />

        <TextView
            android:id="@+id/number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="num2"
            android:layout_marginLeft="21dp"
            android:textStyle="bold"
            android:textSize="30sp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="_________________________________________"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/holo_blue_light"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="25dp"
        android:paddingLeft="35dp"
        android:columnCount="3"
        android:background="@android:color/black"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/keypad_1"
            android:text="1"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="@android:color/holo_green_light"
            />

        <Button
            android:id="@+id/keypad_2"
            android:text="2"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="@android:color/holo_green_light"


            />

        <Button
            android:id="@+id/keypad_3"
            android:text="3"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="@android:color/holo_green_light"


            />
        <Button
            android:id="@+id/keypad_4"
            android:text="4"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="@android:color/holo_green_light"


            />
        <Button
            android:id="@+id/keypad_5"
            android:text="5"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textStyle="bold"


            />
        <Button
            android:id="@+id/keypad_6"
            android:text="6"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textStyle="bold"


            />
        <Button
            android:id="@+id/keypad_7"
            android:text="7"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"

            android:textStyle="bold"

            />

        <Button
            android:id="@+id/keypad_8"
            android:text="8"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textStyle="bold"


            />
        <Button
            android:id="@+id/keypad_9"
            android:text="9"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textStyle="bold"


            />
        <Button
            android:id="@+id/keypad_clear"
            android:text=""
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textStyle="bold"


            />
        <Button
            android:id="@+id/keypad_0"
            android:text="0"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textStyle="bold"


            />
        <Button
            android:id="@+id/keypad_next"
            android:text="next"
            android:layout_margin="5dp"
            android:background="@android:color/holo_green_light"
            android:textStyle="bold"


            />
    </GridLayout>

</LinearLayout>

</ScrollView>


